syntax = "proto3";
package account;
option go_package = "github.com/cita-cloud/operator-proxy/api/account";

message Account {
  string name = 1;
  string namespace = 2;
  string chain = 3;
  string kmsPassword = 4;
  Role role = 5;
  string domain = 6;
  string address = 7;
}

enum Role {
  Admin = 0;
  Consensus = 1;
  Ordinary = 2;
}

message AccountSampleResponse {
  string name = 1;
  string namespace = 2;
}

message ListAccountRequest {
  string namespace = 1;
  string chain = 2;
}

message AccountList {
  repeated Account accounts = 1;
}

service AccountService {
  rpc CreateAccount(Account) returns (Account);
  rpc ListAccount(ListAccountRequest) returns (AccountList);
}