syntax = "proto3";
package node;
option go_package = "github.com/cita-cloud/operator-proxy/api/node";

message Node {
  string name = 1;
  string namespace = 2;
  string cluster = 3;
  string account = 4;
  string externalIp = 5;
  int32 port = 6;
  string chain = 7;
  int64 storageSize = 13;
  string storageClassName = 14;
}

enum Status {
  WaitChainOnline = 0;
  Initialized = 1;
  Starting = 2;
  Running = 3;
  Warning = 4;
  Error = 5;
  Updating = 6;
  Stopping = 7;
  Stopped = 8;
}

message NodeSimpleResponse {
  string name = 1;
  string namespace = 2;
  Status status = 3;
}

message ListNodeRequest {
  string namespace = 1;
  string chain = 2;
}

message NodeList {
  repeated Node nodes = 1;
}

service NodeService {
  rpc Init(Node) returns (NodeSimpleResponse);
  rpc List(ListNodeRequest) returns (NodeList);
}